fix alignment of values in table

--- a/src/components/Attribute/Attribute.css
+++ b/src/components/Attribute/Attribute.css
@@ -7,3 +7,7 @@
 .attr-name {
   font-weight: 100;
 }
+
+.td-value {
+  vertical-align: bottom !important;
+}
